[package]
name = "twitch2csv"
description = "A tool to stream the chats of Twitch channels as a CSV"
repository = "https://github.com/Kerollmops/twitch2csv"
version = "0.1.1"
edition = "2018"
license = "MIT"

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.19"
clap = { version = "3.2.5", features = ["derive"] }
csv = "1.1.6"
tokio = { version = "1.0", features = ["rt", "time", "sync", "macros", "rt-multi-thread"] }
twitch-irc = "4.0.0"
